--- a/index.html
+++ b/index.html
@@ -2,30 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel Agency</title>
+    <meta name="viewport" content=
+    "width=device-width, initial-scale=1.0">
+    <title>Trave Agency</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="wrapper">
-            <h1>Travel Agency <span class="orange"</span>.</h1>
-         <nav>
-        <ul>
-          <li><a href="#main-image">Accueil</a></li>
-          <li><a href="#steps">Destinatons</a></li>
-          <li><a href="#possibilities">Circuits</a></li>
-          <li><a href="#Contact">Contact</a></li>
-        </ul>
-         </nav>
+            <h1>Travel Agency<span class="orange">.</span></h1>
+            <nav>
+                <ul>
+                    <li><a href="#main-image">Accei</a></li>
+                    <li><a href="#steps">Destinatjions</a></li>
+                    <li><a href="#posibilities">Circuits</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
     <section id="main-image">
         <div class="wrapper">
-         <h2>Organinez votre<br><strong>voyage sur mesure
-         </strong></h2>
-         <a href="#" class="button-1">Par ici</a>   
+            <h2>Organisez votre<br><strong>voyage sur mesure</strong></h2>
+            <a href="#"class="button-1">Par ici</a>
         </div>
     </section>
 
@@ -33,42 +33,85 @@
         <div class="wrapper">
             <ul>
                 <li id="step-1">
-                    <h4>Planifier</h4>
-                    <p>
-                        Confiez-nous vos rêves d'évasion : en famille
-                        ou entre amis, nous trouverons la formule
-                        qui comblera vos attentes.
-                    </p>
-                </li>
-                <li id="step-2">
-                    <h4>Organisez</h4>
-                    <p>Bénéficiez de l'expertise de nos spécialistes
-                    de chaque destination, ils vous accompagnent dans
-                    la réalisation de votre voyage.
-                </p>
-                </li>
-                <li id="step-3">
-                    <h4>Voyager</h4>
-                    <p>
-                        Nous nous chargeons d'assurer votre sécurité
-                        et de veiller à votre pleine sérénité tout
-                        au long de votre voyage.
-                        </p>
-                </li>
+        <h4>Planifier</h4>
+         <p>Confiez-nous vos rêves d'évasion
+          : en famille ou entre amis, nous
+           trouverons la formule qui comblera
+          vos attentes.</p>
+            </li>
+
+        <Li id="step-2">
+        <h4>Organisez</h4>
+            <p>Bénéficiez de l'expertise de nos
+           spécialistes de chaque destination,
+             ils vous accompagnent dans la
+               réalisation de votre voyage.</p>
+              </Li>
+
+         <li id="step-3">
+            <h4>Voyage</h4>
+                 <p>Nous nous chargeons d'assurer votre
+                   sécurité et de veiller à votre pleine
+                   sérénité tout au long de votre voyage.</p>
+                  </li>
+                   <div class="clear"></div>
             </ul>
         </div>
     </section>
+
+    <section id="possibilities">
         <div class="wrapper">
+            <article style="background-image: url('image/article-image-1.jpg');">
+                <div class="overlay">
+                    <h4>Parter en famille</h4>
+                    <p><small>Offrez le meilleur à ceux que
+                         vous aimez et partagez des moments
+                          fabuleux !</small></p>
+                          <a href="#" class="button-2">Plus d'infos</a>
+                </div>
+            </article>
+
+            <article style="background-image: url('image/article-image-2.jpg');">
+                <div class="overlay">
+                    <h4>Envie De S'evader</h4>
+                    <p><small>Parfois un peu d'évasion serait
+                         le bienvenue et ferait le plus 
+                         grand bien !</small></p>
+                         <a href="#" class="button-2">Plus d'infos</a>
+                </div>
+            </article>
+            <div class="clear"></div>
         </div>
     </section>
 
     <section id="contact">
         <div class="wrapper">
+            <h3>Contactez-Nous</h3>
+            <p>Chez Travel Agency nous savons
+         que voyager est une aventure humaine
+         mais également un engagement financier
+         important pour<br> vous. C'est pourquoi nous
+          mettons un point d'honneur à prendre en
+         compte chacune de vos attentes pour<br> vous
+          aider dans la préparation de votre
+           séjour, circuit ou voyage sur mesure.
+        </p>
+        <form>
+        <label for="name">Nom</form>
+    <input type="text" id="name" placeholder="Votre nom">
+          
+    <label for="email">Email</form>
+        <input type="text" id="email" placeholder="Votre email">
+ 
+        <input type="button" value="Ok" class=" button-3">
+        </form>
         </div>
     </section>
 
     <footer>
         <div class="wrapper">
+            <h1>Travel Agency<span>.</span></h1>
+        <div class="copyright">Copyright © Tous droits réservés.</div>
         </div>
     </footer>
 </body>
